--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.h2.console.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stockexchangebyabhinav@gmail.com
+spring.mail.password=stock123!!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
